src/test/deca/syntax/invalid/lexer/ident1.deca
// Description:
//    Test invalide du lexer.
//
// Resultats:
//    erreur ligne 7

id&ent
